fix(style): share screen z-index less then telebox collector (#995)

--- a/desktop/renderer-app/src/components/ShareScreen/ShareScreen/style.less
+++ b/desktop/renderer-app/src/components/ShareScreen/ShareScreen/style.less
@@ -1,6 +1,6 @@
 .share-screen {
     position: absolute;
-    z-index: 5;
+    z-index: 300;
     background-color: black;
 
     &.active {
