--- a/web/flat-web/src/components/ShareScreen/style.less
+++ b/web/flat-web/src/components/ShareScreen/style.less
@@ -1,6 +1,6 @@
 .share-screen {
     position: absolute;
-    z-index: 5;
+    z-index: 300;
 
     &.active {
         width: 100%;
